Criando o modelo de Categorias e gerando a primeira migration

--- a/Inventory/appsettings.json
+++ b/Inventory/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Inventory": "Server=localhost;Database=master;Trusted_Connection=True;"
+    "Inventory": "Server=localhost;Database=Inventory;Trusted_Connection=True;"
   }
 }
