--- a/Inventory/Inventory.csproj
+++ b/Inventory/Inventory.csproj
@@ -5,6 +5,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Remove="Views\Shared\_Layout.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3">
 			<PrivateAssets>all</PrivateAssets>
