--- a/Inventory/Inventory.csproj
+++ b/Inventory/Inventory.csproj
@@ -19,7 +19,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="wwwroot\" />
+	  <Folder Include="wwwroot\css\" />
+	  <Folder Include="wwwroot\js\" />
+	  <Folder Include="wwwroot\images\" />
 	</ItemGroup>
 
 </Project>
